# lab-4-maksimma07

src/resource_core/: CMakeLists.txt  FileHandle.cpp  ResourceManager.cpp
src/resource_core/include/: FileHandle.hpp  ResourceError.hpp  ResourceManager.hpp
tests/: tests.cpp
